src/objects/SurveySchedule__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Schedules</relationshipLabel>
        <relationshipName>SurveySchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Survey Schedules</relationshipLabel>
        <relationshipName>Survey_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Does not contain accounts payable contacts.</errorMessage>
            <filterItems>
                <field>Contact.LastName</field>
                <operation>notContain</operation>
                <value>Payable</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Schedules</relationshipLabel>
        <relationshipName>Survey_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DoNotSurvey__c</fullName>
        <formula>Account__r.DoNotSurvey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Survey Schedules</relationshipLabel>
        <relationshipName>SurveySchedulesProject</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScheduledDate__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Schedules (Site Account)</relationshipLabel>
        <relationshipName>Survey_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Schedule</label>
    <nameField>
        <displayFormat>SS-{00000000}</displayFormat>
        <label>Survey Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EcoDoNotSurvey</fullName>
        <active>true</active>
        <description>Prevents a user from creating a record if the &apos;Do Not Survey&apos; value is set to True on the Account indicated in the survey schedule.</description>
        <errorConditionFormula>AND(ISNEW(), DoNotSurvey__c = True)</errorConditionFormula>
        <errorMessage>This account cannot be surveyed.</errorMessage>
    </validationRules>
</CustomObject>